testdata/zkc/invalid/switch_two_defaults_01.zkc
//error:19:5-11:multiple default cases in switch statement

// ==================
// duplicate default
// ==================

type exmp = u8

const CASE_A     :exmp = 1
const CASE_B     :exmp = 2
const CASE_MATCH :exmp = 13

fn main() {

  var discr :exmp = CASE_MATCH

  switch discr {
    default: {}
    default: {}
  }
}
